--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -614,6 +614,8 @@
     "- Define attributes \n",
     "- Define methods\n",
     "\n",
+    "Although only the driving functionality has been added to our Model X, many other functionalities such as braking, lights on and lights off can be implemented.\n",
+    "\n",
     "In the following, a second car will be built in order to illustrate the benefits of the individual paradigms in different situations.\n",
     "\n",
     "<img src=\"imgs/06_blueprint_functionality.png\" width=\"400\">"
