--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -134,11 +134,11 @@
     }
    ],
    "source": [
-    "# specify the model\n",
-    "model = \"Model X\"\n",
+    "# specifying the model\n",
+    "model_x = \"Model X\"\n",
     "\n",
     "# show the specified model\n",
-    "print(\"The model under construction is: {}\".format(model))"
+    "print(\"The model under construction is: {}\".format(model_x))"
    ]
   },
   {
@@ -163,8 +163,10 @@
     }
    ],
    "source": [
+    "# function to specify the model\n",
     "def specify_model(model_name):\n",
-    "    # specify the model locally\n",
+    "    \n",
+    "    # specifying the model locally\n",
     "    model = model_name\n",
     "    \n",
     "    # show the specified model\n",
@@ -173,8 +175,8 @@
     "    # return the specified model\n",
     "    return model\n",
     "    \n",
-    "# specify the model globally\n",
-    "model = specify_model(\"Model X\")"
+    "# specifying the model globally\n",
+    "model_x = specify_model(\"Model X\")"
    ]
   },
   {
@@ -215,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model under construction is: <__main__.Car object at 0x7fccf7874e50>\n"
+      "The model under construction is: <__main__.Car object at 0x7fd29a09c5b0>\n"
      ]
     }
    ],
@@ -272,25 +274,29 @@
      "output_type": "stream",
      "text": [
       "The Model X has the following specifications:\n",
-      "Available colours: ['red', 'white', 'black']\n",
-      "HP: 120\n",
-      "Length: 3\n",
-      "Width: 1.5\n"
+      "Available colours: ['white', 'black', 'silver', 'blue', 'red']\n",
+      "HP: 443\n",
+      "Length: 5.04\n",
+      "Width: 2.27\n"
      ]
     }
    ],
    "source": [
-    "modelX_name = \"Model X\"\n",
-    "modelX_colors = ['red', 'white', 'black']\n",
-    "modelX_hp = 443\n",
-    "modelX_length = 5.04\n",
-    "modelX_width = 2.27\n",
+    "# specifying the model\n",
+    "model_x_name = \"Model X\"\n",
     "\n",
-    "print(\"The {} has the following specifications:\".format(modelX_name))\n",
-    "print(\"Available colours: {}\".format(modelX_colors))\n",
-    "print(\"HP: {}\".format(modelX_hp))\n",
-    "print(\"Length: {}\".format(modelX_length))\n",
-    "print(\"Width: {}\".format(modelX_width))"
+    "# specifying the attributes\n",
+    "model_x_colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"]\n",
+    "model_x_hp = 443\n",
+    "model_x_length = 5.04\n",
+    "model_x_width = 2.27\n",
+    "\n",
+    "# printing the model and the attributes\n",
+    "print(\"The {} has the following specifications:\".format(model_x_name))\n",
+    "print(\"Available colours: {}\".format(model_x_colors))\n",
+    "print(\"HP: {}\".format(model_x_hp))\n",
+    "print(\"Length: {}\".format(model_x_length))\n",
+    "print(\"Width: {}\".format(model_x_width))"
    ]
   },
   {
@@ -309,6 +315,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to specify the model\n",
+    "def specify_model(model_name):\n",
+    "    \n",
+    "    model = model_name\n",
+    "    \n",
+    "    print(\"The model under construction is: {}\".format(model))\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "# function to specify the attributes\n",
     "def car_attr(name, colors, hp, length, width):\n",
     "    \"\"\"\n",
     "    Prints the specifications.\n",
@@ -342,20 +358,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The model under construction is: Model X\n",
       "The Model X has the following specifications:\n",
-      "Available colours: ['red', 'white', 'black']\n",
-      "HP: 120\n",
-      "Length: 3\n",
-      "Width: 1.5\n"
+      "Available colours: ['white', 'black', 'silver', 'blue', 'red']\n",
+      "HP: 443\n",
+      "Length: 5.04\n",
+      "Width: 2.27\n"
      ]
     }
    ],
    "source": [
-    "modelX_attr = car_attr(name=\"Model X\", \n",
-    "                         colors=['red', 'white', 'black'], \n",
-    "                         hp=443, \n",
-    "                         length=5.04, \n",
-    "                         width=2.27)"
+    "# specifying the model\n",
+    "model_x = specify_model(\"Model X\")\n",
+    "\n",
+    "# specifying the attributes\n",
+    "model_x_attr = car_attr(name = model_x, \n",
+    "                        colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"], \n",
+    "                        hp = 443, \n",
+    "                        length = 5.04, \n",
+    "                        width = 2.27)"
    ]
   },
   {
@@ -381,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,31 +422,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model X is a car by Tesla.\n",
-      "Model X has a length of 3m and a width of 1.5m.\n"
+      "The Model X is a car by Tesla.\n",
+      "The Model X has a length of 5.04m and a width of 2.27m.\n"
      ]
     }
    ],
    "source": [
-    "#instantiate the Car class with the Model X object\n",
-    "Model_X = Car(name=\"Model X\", \n",
-    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
-    "              hp=443,\n",
-    "              length=5.04,\n",
-    "              width=2.27)\n",
+    "# instantiating the object\n",
+    "model_x = Car(name = \"Model X\", \n",
+    "              colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
+    "              hp = 443,\n",
+    "              length = 5.04,\n",
+    "              width = 2.27)\n",
     "\n",
-    "# access the class attributes\n",
-    "print(\"The {} is a car by {}.\".format(Model_X.name, Model_X.brand))\n",
+    "# printing the name and class attribute\n",
+    "print(\"The {} is a car by {}.\".format(model_x.name, model_x.brand))\n",
     "\n",
-    "# access the instance attributes\n",
-    "print(\"The {} has a length of {}m and a width of {}m.\".format(Model_X.name, Model_X.length, Model_X.width))"
+    "# printing some instance attributes\n",
+    "print(\"The {} has a length of {}m and a width of {}m.\".format(model_x.name, model_x.length, model_x.width))"
    ]
   },
   {
@@ -456,30 +477,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model X is driving\n"
+      "Model X is driving at 100 mph.\n"
      ]
     }
    ],
    "source": [
-    "# Specifying the model\n",
-    "car = 'Model X'\n",
+    "# specifying the model\n",
+    "model_x = \"Model X\"\n",
     "\n",
-    "# Defining the Attributes\n",
-    "car_colors = ['red', 'white', 'black']\n",
-    "car_hp = 443\n",
-    "car_length_m = 5.04\n",
-    "car_width_m = 2.27\n",
+    "# specifying the attributes\n",
+    "model_x_colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"]\n",
+    "model_x_hp = 443\n",
+    "model_x_length = 5.04\n",
+    "model_x_width = 2.27\n",
     "\n",
-    "# Defining the Functionality\n",
+    "# specifying the functionality\n",
     "mph = 100\n",
-    "print(car, 'is driving')"
+    "print(\"{} is driving at {} mph.\".format(model_x, mph))"
    ]
   },
   {
@@ -492,14 +513,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the Construction Plan\n",
-    "car = 'Model X'\n",
+    "# function to specify the model\n",
+    "def specify_model(model_name):\n",
+    "    model = model_name\n",
+    "    \n",
+    "    print(\"The model under construction is: {}\".format(model))\n",
+    "    \n",
+    "    return model\n",
     "\n",
-    "# Defining the Attributes\n",
+    "# function to specify the attributes\n",
     "def car_attr(name, colors, hp, length, width):\n",
     "\n",
     "    car_attr = [name, colors, hp, length, width]\n",
@@ -512,26 +538,43 @@
     "\n",
     "    return car_attr\n",
     "\n",
-    "# Defining the Functionality\n",
-    "def drive(car, mph):\n",
-    "    print(\"{}is driving at {}\".format{car, mph})"
+    "# function for the functionality\n",
+    "def drive(model, mph):\n",
+    "    print(\"{} is driving at {} mph.\".format(model, mph))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model X is driving.\n"
+      "The model under construction is: Model X\n",
+      "The Model X has the following specifications:\n",
+      "Available colours: ['white', 'black', 'silver', 'blue', 'red']\n",
+      "HP: 443\n",
+      "Length: 5.04\n",
+      "Width: 2.27\n",
+      "Model X is driving at 100 mph.\n"
      ]
     }
    ],
    "source": [
-    "drive(car, 100)"
+    "# specifying the model\n",
+    "model_x = specify_model(\"Model X\")\n",
+    "\n",
+    "# specifying the attributes\n",
+    "model_x_attr = car_attr(name = model_x, \n",
+    "                        colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"], \n",
+    "                        hp = 443, \n",
+    "                        length = 5.04, \n",
+    "                        width = 2.27)\n",
+    "\n",
+    "# using the functionality\n",
+    "drive(model_x, 100)"
    ]
   },
   {
@@ -564,43 +607,45 @@
     "        self.hp = hp\n",
     "        self.length = length\n",
     "        self.width = width\n",
-    "        self.state = \"off\"  # find a better initial state\n",
-    "        self.lights = False\n",
+    "        self.state = \"off\"\n",
     "\n",
-    "    # Defining the Functionalities\n",
+    "    # defining the functionalities\n",
     "    def drive(self, mph):\n",
     "        self.state = \"driving\"\n",
-    "        print(\"{} is {} with {} mph.\".format(self.name, self.state, mph))        "
+    "        print(\"{} is {} at {} mph.\".format(self.name, self.state, mph))        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "Model_X = Car(name=\"Model X\", \n",
-    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
-    "              hp=443,\n",
-    "              length=5.04,\n",
-    "              width=2.27)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model X is driving with 100 mph.\n"
+      "The Model X is a car by Tesla.\n",
+      "The Model X has a length of 5.04m and a width of 2.27m.\n",
+      "Model X is driving at 100 mph.\n"
      ]
     }
    ],
    "source": [
-    "Model_X.drive(100)"
+    "# instantiating the object\n",
+    "model_x = Car(name = \"Model X\", \n",
+    "              colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"],\n",
+    "              hp = 443,\n",
+    "              length = 5.04,\n",
+    "              width = 2.27)\n",
+    "\n",
+    "# printing the name and class attribute\n",
+    "print(\"The {} is a car by {}.\".format(model_x.name, model_x.brand))\n",
+    "\n",
+    "# printing mone instance attributes\n",
+    "print(\"The {} has a length of {}m and a width of {}m.\".format(model_x.name, model_x.length, model_x.width))\n",
+    "\n",
+    "# using the functionality\n",
+    "model_x.drive(100)"
    ]
   },
   {
@@ -608,7 +653,7 @@
    "metadata": {},
    "source": [
     "We have now specified the car, defined some attributes and finally added a functionality in all three programming paradigms. `Model_X` is now completed. \n",
-    "Especially reagrding the object oriented programming, you have learnt how to:\n",
+    "Especially regarding the object oriented programming, you have learnt how to:\n",
     "- Define a class\n",
     "- Instantiate an object\n",
     "- Define attributes \n",
@@ -634,16 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiating the Model S\n",
-    "Model_S = Car(name=\"Model S\", \n",
-    "              colors=[\"white\", \"black\", \"silver\", \"blue\", \"red\"], \n",
-    "              hp=670,\n",
-    "              length=4.98,\n",
-    "              width=2.19)"
+    "# instantiating the Model S\n",
+    "model_s = Car(name = \"Model S\", \n",
+    "              colors = [\"white\", \"black\", \"silver\", \"blue\", \"red\"], \n",
+    "              hp = 670,\n",
+    "              length = 4.98,\n",
+    "              width  = 2.19)"
    ]
   },
   {
@@ -655,24 +700,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model S is a car by Tesla.\n",
-      "Model S has a length of 4.98m and a width of 2.19m.\n"
+      "The Model S is a car by Tesla.\n",
+      "The Model S has a length of 4.98m and a width of 2.19m.\n"
      ]
     }
    ],
    "source": [
-    "# Accessing the class attributes\n",
-    "print(\"The {} is a car by {}.\".format(Model_S.name, Model_S.brand))\n",
+    "# printing the class attributes\n",
+    "print(\"The {} is a car by {}.\".format(model_s.name, model_s.brand))\n",
     "\n",
-    "# Accessing the instance attributes\n",
-    "print(\"The {} has a length of {}m and a width of {}m.\".format(Model_S.name, Model_S.length, Model_S.width))"
+    "# printing some instance attributes\n",
+    "print(\"The {} has a length of {}m and a width of {}m.\".format(model_s.name, model_s.length, model_s.width))"
    ]
   },
   {
@@ -684,20 +729,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model S is driving with 100 mph.\n"
+      "Model S is driving at 100 mph.\n"
      ]
     }
    ],
    "source": [
-    "# Calling class method Car.drive()\n",
-    "Model_S.drive(100)"
+    "# using the functionality Car.drive()\n",
+    "model_s.drive(100)"
    ]
   },
   {
@@ -738,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
