--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "## Example Case: Building a Car <a class=\"anchor\" id=\"example_case\"></a>\n",
-    "In the following sub-chapters, the three different paradigms - procedural, functional and object oriented - will all be illustrated by the same example: the construction of the Model X car by the manufacturer Tesla. The aim of this chapter is to convey to the reader that the three paradigms are not completely different 'things', but rather allow a different perspective or approach to tackle one and the same problem. The example with the car, a simple everyday objcet, is used to convey the concepts of the three paradigms more easily. To get a better idea of the car, here is a picture of the original Model X by Tesla:\n",
+    "In the following sub-chapters, the three different paradigms - procedural, functional and object oriented - will all be illustrated by the same example: the construction of the Model X car by the manufacturer Tesla. The aim of this chapter is to convey to the reader that the three paradigms are not completely different 'things', but rather allow a different perspective or approach to tackle one and the same problem. The example with the car, a simple everyday object, is used to convey the concepts of the three paradigms more easily. To get a better idea of the car, here is a picture of the original Model X by Tesla:\n",
     "\n",
     "![Markdown](imgs/06_model_x.png)\n",
     "\n",
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "#### Functional\n",
-    "In the case of the functional paradigm, we create a function called ````specify_model```` and pass the desired name of the model to the function through the parameter called ````model_name````. In the suite of the function the model is specified locally by assigning the passed name of the model to the local variable called ````model````. In this context, local means the variable is only usable inside the suite of the function (the intended lines below the signature/name of the function). In the last step of the function, the value of the variable ````model```` is returned and assigned to the global variable called ````model````. This last step has to be done in order to make the specified model globally available."
+    "In the case of the functional paradigm, we create a function called ````specify_model```` and pass the desired name of the model to the function through the parameter called ````model_name````. In the suite of the function the model is specified locally by assigning the passed name of the model to the local variable called ````model````. In this context, local means the variable is only usable inside the suite of the function (the indented lines below the signature/name of the function). In the last step of the function, the value of the variable ````model```` is returned and assigned to the global variable called ````model````. This last step has to be done in order to make the specified model globally available."
    ]
   },
   {
