--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -217,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model under construction is: <__main__.Car object at 0x7fd29a09c5b0>\n"
+      "The model under construction is: <__main__.Car object at 0x7fc166f8e2b0>\n"
      ]
     }
    ],
@@ -756,7 +756,9 @@
     "* https://blog.newrelic.com/engineering/python-programming-styles/  \n",
     "* https://hackr.io/blog/procedural-programming   \n",
     "* https://t3n.de/news/tesla-rueckruf-touchscreen-1353586/\n",
-    "* https://www.freepik.com/free-photos-vectors/construction-blueprint"
+    "* https://www.freepik.com/free-photos-vectors/construction-blueprint\n",
+    "* https://www.programiz.com/python-programming/object-oriented-programming\n",
+    "* https://realpython.com/python3-object-oriented-programming/"
    ]
   },
   {
