--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See, how easy that was? We can now have a look a our new car's attributes:"
+    "See, how easy that was? We can now have a look at our new car's attributes:"
    ]
   },
   {
@@ -760,13 +760,6 @@
     "* https://www.programiz.com/python-programming/object-oriented-programming\n",
     "* https://realpython.com/python3-object-oriented-programming/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
