Edited version (merged with old tutorial) of the paradigm tutorial.

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -16,7 +16,8 @@
     "    3.2 [Defining the Attributes](#defining_the_attributes)<br>\n",
     "    3.3 [Defining the Functionality](#defining_the_functionality)<br>\n",
     "    3.4 [Building a Different Car](#building_a_different_car)<br>\n",
-    "4. [Sources](#sources)"
+    "4. [Four Fundamental Principles of Object-oriented Programming](#FunctionalFunctionalfundamental_principles\")\n",
+    "5. [Sources](#sources)"
    ]
   },
   {
@@ -743,6 +744,234 @@
    "source": [
     "# using the functionality Car.drive()\n",
     "model_s.drive(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"fundamental_principles\"></a>\n",
+    "## Four Fundamental Principles of Object-oriented Programming\n",
+    "\n",
+    "### Encapsulation\n",
+    "Encapsulation refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's own public setter methods to modify state in the class, this prevents the unintentional spread of changes made in one part of a program to other parts of the program. Encapsulation is especially important in large and complex projects worked on by teams of programmers, where communication between different parts of the program must be carefully managed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "King Kong is currently asleep.\n",
+      "King Kong is currently awake.\n",
+      "\n",
+      "King Kong is black in colour.\n",
+      "King Kong is black in colour.\n",
+      "\n",
+      "King Kong is black in colour.\n",
+      "King Kong is red in colour.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Gorilla2:\n",
+    "    def __init__(self, name, awakeness, colour):\n",
+    "        self.name = name\n",
+    "        self.awakeness = awakeness\n",
+    "        self.__colour = colour # Note the double underscore denoting a private attribute\n",
+    "        \n",
+    "    def currentstate(self):\n",
+    "        print(f\"{self.name} is currently {self.awakeness}.\")\n",
+    "        \n",
+    "    def currentcolour(self):\n",
+    "        print(f\"{self.name} is {self.__colour} in colour.\")\n",
+    "        \n",
+    "    def spraypaint(self, paint): # Public method that changes the private attribute \"self.__colour\"\n",
+    "        self.paint = paint\n",
+    "        self.__colour = paint\n",
+    "        \n",
+    "kingkong = Gorilla2(\"King Kong\", \"asleep\", \"black\")\n",
+    "\n",
+    "kingkong.currentstate()\n",
+    "kingkong.awakeness = \"awake\" # Usually, attributes in a class can be directly modified outside the class\n",
+    "kingkong.currentstate()\n",
+    "print(\"\")\n",
+    "\n",
+    "kingkong.currentcolour()\n",
+    "kingkong.__colour = \"brown\" # However, private attributes cannot be modified outside the class\n",
+    "kingkong.currentcolour()    # Therefore, this attribute will not be changed to \"brown\"\n",
+    "print(\"\")\n",
+    "\n",
+    "kingkong.currentcolour()\n",
+    "kingkong.spraypaint(\"red\") # Private attributes can only be modified by public setter methods of the class\n",
+    "kingkong.currentcolour()\n",
+    "print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Abstraction\n",
+    "Abstraction refers to the principle of displaying essential information by hiding unnecessary information. This is done by creating sub-classes for this unnecessary information. This isolation of the information is similar to inheritance in the aspect of how it is achieved (creating specific sub-classes), but it has its own purpose: simplicity.  \n",
+    "\n",
+    "This principle may not seem advantageous at first glance. After all, why would we want to hide information about how the tasks of our program are achieved? How exactly does this reduce complexity?   Consider a TV remote. Do we know exactly how each of the buttons on our remote function in everyday usage? Should we be reminded at every press of a button on our remote, that we are making the underlying chip's sensor turn on, producing an electrical signal which is amplified with a transistor, then sent through a LED which finally prompts an infrared light to communicate with our TV?  \n",
+    "\n",
+    "What matters to us is that the power button correctly prompts the television to turn on, that the volume button changes the volume, and that the channel changes when we use the button to change channels. The inner-workings of these buttons do not need to be apparent in the daily usage of our remote. This is the exact point of abstraction: we want to reduce complexity. Through abstraction we are also able to isolate parts of our code, making its maintenance more efficient by ensuring changes are to be made locally."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance\n",
+    "Inheritance refers to how an object-oriented programming language allows the creation of (child) subclasses using the characteristics of an existing parent or superclass. In other words, the child class can inherit attributes from the parent class. By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (e.g. Gorilla to Monkey) until it finds the called method (init) to be executed. Now, let's customize our subclass a little bit. Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the subclass, as they do not exist in the subclass. However, it is possible to overwrite them, as shown in the example below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monkey\n",
+      "Gorilla\n",
+      "\n",
+      "Brutus benches 130 kg.\n",
+      "George has an IQ of 170.\n",
+      "\n",
+      "Brutus is eating a banana.\n",
+      "George is eating caviar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is our parent class\n",
+    "class Monkey: \n",
+    "    family = \"Monkey\"\n",
+    "    # Instance attribute\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name \n",
+    "        self.age = age\n",
+    "    # Instance method\n",
+    "    def eat(self):\n",
+    "        return '{} is eating a banana.'.format(self.name)   \n",
+    "    \n",
+    "# Creating our first child class   \n",
+    "class Gorilla(Monkey): \n",
+    "    species = 'Gorilla'\n",
+    "    # Adding a new attribute\n",
+    "    def __init__(self, name, age, strength):\n",
+    "        # Calling the parents init methods  \n",
+    "        super().__init__(name, age)  \n",
+    "        # Call the new subclass specific attribute\n",
+    "        self.strength = strength \n",
+    "        # Strength is quantified by how many kilograms the gorilla benches\n",
+    "        \n",
+    "# Creating our second child class   \n",
+    "class Chimpanzee(Monkey): \n",
+    "    species = 'Chimpanzee'\n",
+    "    # Adding a new attribute\n",
+    "    def __init__(self, name, age, IQ):\n",
+    "        # Calling the parents init methods  \n",
+    "        super().__init__(name, age)  \n",
+    "        # Call the new subclass specific attribute\n",
+    "        self.IQ = IQ  \n",
+    "        # Replace method\n",
+    "    def eat(self):\n",
+    "        return '{} is eating caviar.'.format(self.name) \n",
+    "    \n",
+    "brutus = Gorilla('Brutus', 11, 130)\n",
+    "george = Chimpanzee(\"George\", 7, 170) \n",
+    "\n",
+    "print(brutus.__class__.family)\n",
+    "print(brutus.__class__.species)\n",
+    "print(\"\")\n",
+    "print(\"Brutus benches {} kg.\".format(brutus.strength))\n",
+    "print(\"George has an IQ of {}.\".format(george.IQ))\n",
+    "print(\"\")\n",
+    "print(brutus.eat())\n",
+    "print(george.eat())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brutus, our object of sub-class Gorilla has effectively inherited the family Monkey from its parent attribute. However he also has specific attributes, such as his species Gorilla. \n",
+    "\n",
+    "Both our monkeys Brutus and George have been given a new attribute, unique to their sub-class. Brutus has been given a strength one, whereas George an IQ one. While they both have the same parent class Monkey, they also have their own specific-sub classes which allow them to have different characteristics, gorillas being known for their strength and chimpanzees for their intelligence. \n",
+    "\n",
+    "Lastly, while Brutus has inherited the parent-class eat function, and thus eats bananas, George shows that it is possible to replace parent class methods. Chimpanzees are special and eat caviar. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polymorphism  \n",
+    "Polymorphism is one of the 4 pillars of OOP. It allows our program to process information differently based on their data type. This is achieved through the usage of a generic interface. Let's illustrate this with an example. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dolphins can't sing, silly.\n",
+      "*Sings Despacito*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creation first class\n",
+    "class Dolphin:\n",
+    "    \n",
+    "    def sing(self): \n",
+    "        print(\"Dolphins can't sing, silly.\")\n",
+    "        \n",
+    "\n",
+    "# Creation second class\n",
+    "class Gorilla:\n",
+    "\n",
+    "    def sing(self):\n",
+    "        print (\"*Sings Despacito*\")\n",
+    "\n",
+    "# Creation of generic interface\n",
+    "def singing(animal):\n",
+    "    animal.sing()\n",
+    "    \n",
+    "# Now let's test what this does\n",
+    "# First, we create 2 animals, a dolphin and a gorilla \n",
+    "dolphin1 = Dolphin()\n",
+    "gorilla1 = Gorilla()\n",
+    "\n",
+    "# Pass our objects through the generic interface\n",
+    "singing(dolphin1)\n",
+    "singing(gorilla1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have defined two different classes, `Dolphin()` and `Gorilla()`, each with their own `sing()` method. We then defined a generic interface `singing()`, for the input of any object. Then, passing our two objects, `dolphin1` and `gorilla1` through this interface, we get differing output, depending on the class of our input. In the case of the `Gorilla`, it is able to sing. Because gorillas can sing. Duh. Well only Despacito. In the case of our `Dolphin`, it is sadly unable to sing.\n",
+    "\n",
+    "The generic interface serves a similar purpose as a switchboard. We are now able to enter the `sing()` function of both `Gorillas` and `Dolphins` into this interface, which then directs our program to the correct class, allowing it to differentiate the `singing()` function for our data type, depending on whether it is a `Gorilla` and `Dolphin`. Differentiation of our objects is the main strength of Polymorphism. \n",
+    "\n",
+    "The principles of Inheritance and Polymorphism go hand in hand. While Inheritance allows our sub-classes to inherit the _same_ attributes and methods as a parent or super-class, Polymorphism allows for these to __differ__ depending on which sub-class they originate from."
    ]
   },
   {
